Apply raw option to lexicon instances which need them

--- a/views/lexicon/html/badges.html.twig
+++ b/views/lexicon/html/badges.html.twig
@@ -142,6 +142,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
                             })
@@ -151,6 +152,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--primary',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -161,6 +163,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--success',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -171,6 +174,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--warning',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -181,6 +185,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--danger',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -191,6 +196,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--inverse',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -201,6 +207,7 @@
                 <td class="centered cell--inverse">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--white',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -215,6 +222,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -225,6 +233,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled btn--primary',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -235,6 +244,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled btn--success',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -245,6 +255,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled btn--warning',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -255,6 +266,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled btn--danger',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -265,6 +277,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled btn--inverse',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -275,6 +288,7 @@
                 <td class="centered cell--inverse">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'is-disabled btn--white',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -289,6 +303,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
                                 'label': '123'
@@ -299,6 +314,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--primary',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -310,6 +326,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--success',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -321,6 +338,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--warning',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -332,6 +350,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--danger',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -343,6 +362,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--inverse',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -354,6 +374,7 @@
                 <td class="centered cell--inverse">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--white',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -369,6 +390,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -379,6 +401,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--primary',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -389,6 +412,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--success',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -399,6 +423,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--warning',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -409,6 +434,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--danger',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -419,6 +445,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--inverse',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -429,6 +456,7 @@
                 <td class="centered cell--inverse">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--white',
                             'label': 'Foo ' ~ html.badge({
                                 'label': '123'
@@ -443,6 +471,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -454,6 +483,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--primary',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -465,6 +495,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--success',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -476,6 +507,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--warning',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -487,6 +519,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--danger',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -498,6 +531,7 @@
                 <td class="centered">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--inverse',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -509,6 +543,7 @@
                 <td class="centered cell--inverse">
                     {{
                         html.button({
+                            'raw': true,
                             'class': 'btn--outline btn--white',
                             'label': 'Foo ' ~ html.badge({
                                 'class': 'badge--outline',
@@ -530,6 +565,7 @@
     <br />
     {{
         html.button({
+            'raw': true,
             'label': 'View Documentation',
             'type': 'link',
             'href': 'https://jadu.gitbooks.io/pulsar/content/text.html'
