--- a/views/lexicon/patterns/common-list/table.html.twig
+++ b/views/lexicon/patterns/common-list/table.html.twig
@@ -4,6 +4,7 @@
     {{
         html.actions_menu({
             'class': 'bulk-actions',
+            'raw': true,
             'items': [
                 [
                     {
