--- a/views/lexicon/patterns/filters/create-filter.html.twig
+++ b/views/lexicon/patterns/filters/create-filter.html.twig
@@ -3,6 +3,7 @@
 {%- block actions_left -%}
     {{
         html.actions_menu({
+            'raw': true,
             'items': [
                 [
                     {
