--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -80,6 +80,7 @@
 {%- block actions_left -%}
     {{
         html.actions_menu({
+            'raw': true,
             'items': [
                 [
                     {
