--- a/views/lexicon/tables/sortable.html.twig
+++ b/views/lexicon/tables/sortable.html.twig
@@ -126,6 +126,7 @@
 
         {{
             html.actions_menu({
+                'raw': true,
                 'items': [
                     [
                         {
