--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -81,11 +81,13 @@
                             'items': [
                                 html.link({
                                     "label": html.icon('random') ~ " Stellar City Council",
-                                    "href": "#"
+                                    "href": "#",
+                                    'raw': true,
                                 }),
                                 html.link({
                                     "label": html.icon('random') ~ " Comets City Council",
-                                    "href": "#"
+                                    "href": "#",
+                                    'raw': true,
                                 })
                             ]
                         })
@@ -98,16 +100,19 @@
                             'items': [
                                 html.link({
                                     "label": html.icon('user') ~ " My details",
-                                    "href": "#"
+                                    "href": "#",
+                                    'raw': true,
                                 }),
                                 html.link({
                                     "label": html.icon('key') ~ " Change password",
-                                    "href": "#"
+                                    "href": "#",
+                                    'raw': true,
                                 }),
                                 html.divider(),
                                 html.link({
                                     "label": html.icon('power-off') ~ " Sign out",
-                                    "href": "#"
+                                    "href": "#",
+                                    'raw': true,
                                 })
                             ]
                         })
