--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -1024,7 +1024,7 @@ class   | string | A space separated list of class names
             )
         }}>
             {% for action in options.actions %}
-                {{ action|raw }}
+                {{ action }}
             {% endfor %}
         </div>
     {% endif %}
