--- a/views/lexicon/patterns/rules/logic-based.html.twig
+++ b/views/lexicon/patterns/rules/logic-based.html.twig
@@ -4,6 +4,7 @@
 {%- block actions_left -%}
     {{
         html.actions_menu({
+            'raw': true,
             'items': [
                 [
                     {
