Fix interpolation warnings in dart-sass

--- a/stylesheets/_component.badges.scss
+++ b/stylesheets/_component.badges.scss
@@ -29,7 +29,7 @@
 // Inside labels
 .label {
     @each $state, $state-color, $state-color-alt in $state-colors {
-        &.label--#{$state} .badge {
+        &.label--#{"" + $state} .badge {
             background-color: $state-color !important;
             color: pick_best_color($state-color, (#fff, color(text))) !important;
         }
@@ -69,8 +69,8 @@ a.list-group-item.active > .badge,
 
 // Variations
 @each $state, $state-color, $state-color-alt in $state-colors {
-    .badge--#{$state},
-    %badge--#{$state} {
+    .badge--#{"" + $state},
+    %badge--#{"" + $state} {
         background-color: $state-color;
         color: pick_best_color($state-color, (#fff, color(text))) !important;
 
