--- a/stylesheets/_structure.forms.scss
+++ b/stylesheets/_structure.forms.scss
@@ -57,6 +57,11 @@
     @include col-span($form-control-cols, false);
 }
 
+// Tight spacing to bring related controls closer together
+.form__group.form__group--tight {
+    margin-bottom: $margin-base-vertical;
+}
+
 // inputs can be aligned next to each other if required
 .form__group--inline > .controls {
 
