Added caption styling

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -4,7 +4,17 @@
 
     caption {
         display: table-caption;
+        padding-bottom: $padding-large-vertical;
         text-align: left;
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            margin-bottom: 0;
+        }
     }
 
     [href],
