--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1581,7 +1581,7 @@ Datatable - https://jadu.github.io/pulsar/components/datatable/
                     {% for column in options.data.columns %}
                         {% if loop.first %}
                             {% if options['data-select'] is not defined or (options['data-select'] is defined and options['data-select'] != 'false') %}
-                                <th class="table-selection" data-orderable="false" scope="col">
+                                <th scope="col" class="table-selection" data-orderable="false">
                                     <span class="hide">Row selection controls</span>
                                     <input type="checkbox" class="form__control checkbox js-select-all" aria-label="Select all rows" data-tippy-content="Select all rows" data-tippy-placement="right" />
                                 </th>
