Squashed commit of the following:
commit 43d06027a1416595eb4369c7fb933a8e3ca450d2
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 10:18:55 2021 +0000

    We fixed it, lets break it again

commit 3491cf626030814cb64142a1033c7350eb1f3bf7
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 10:05:55 2021 +0000

    Anotha one

commit 94a1650ce125f02a37b881876112f025af9a9c6f
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 09:54:49 2021 +0000

    this time

commit f3f579ff4fbadfb7ff0cb8c832bf02213f758bd1
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 09:38:13 2021 +0000

    niiine

commit 7aedd194a9887faf5f62df33aab9db588903ea3b
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 09:18:25 2021 +0000

    Gahd

commit 3cae3431501d47c2d4b222e12048d578c32d13c6
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 09:07:57 2021 +0000

    Switch to require

commit 511d516a45f5dd0dfc323f5fc8cd2b788c7ded06
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 08:41:56 2021 +0000

    Stop attempting to install phpunit

commit 76b8c4f8788f80dfa8eed6f123044744697d4f89
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 08:29:34 2021 +0000

    Re-add phpunit

commit 428ee1df73dd14354f6b05b6a5af7675bf77fe25
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 08:23:41 2021 +0000

    Down to 7.3 only

commit ea28d2b5d16f95f2ab6a3ef5df3bcf6ae0a6d382
Merge: 1bac9fca5 5fe0914e7
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 08:10:30 2021 +0000

    Merge branch '1373_php73' of github.com:jadu/pulsar into 1373_php73

commit 1bac9fca5ab8c0569be204c0994c7ca9619eb479
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Mon Feb 8 08:10:22 2021 +0000

    Reset to last known working state

commit 5fe0914e7ab5fa1ce583cd72f77ecbe27f4952dd
Author: Paul Stanton <paul@coffeepowered.co.uk>
Date:   Fri Feb 5 17:12:48 2021 +0000

    PPPPHP 

--- a/stylesheets/_component.cards.scss
+++ b/stylesheets/_component.cards.scss
@@ -77,7 +77,7 @@
 }
 
 @each $state, $state-color, $state-color-alt in $state-colors {
-    .card--#{$state} {
+    .card--#{'' + $state} {
         background-color: color($state, light);
         border-color: color($state);
 
