--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -2,6 +2,21 @@
     border-collapse: collapse;
     margin-bottom: 24px;
 
+    caption {
+        display: table-caption;
+        padding-bottom: $padding-large-vertical;
+        text-align: left;
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            margin-bottom: 0;
+        }
+    }
+
     [href],
     .continuum-cms & [href]:link {
         border-bottom: 1px dotted color(grey, light);
@@ -65,7 +80,7 @@
     }
 
     @each $state, $state-color, $state-color-alt in $state-colors {
-        tr.has-#{$state} {
+        tr.has-#{'' + $state} {
             background-color: color($state, light) !important;
 
             &:hover {
@@ -346,7 +361,7 @@ td.row__actions {
     z-index: $zindex-sticky;
 
     @include respond-min($screen-tablet) {
-        bottom: 37px;
+        bottom: $footer-height;
     }
 }
 
